# youTube

./: .env  .gitignore  manage.py  pyproject.toml
templates/: email.html  header.html  index.html  login.html  password_reset.html  profile.html  reset_request.html  results.html  search.html  update_profile.html
youTube_app/: admin.py  apps.py  forms.py  helper_functions.py  models.py  views.py
youTube_app/migrations/: 0001_initial.py  0002_downloaduser_user_pic.py  0003_alter_downloaduser_user_pic.py  0004_alter_downloaduser_user_pic.py  0005_auto_20211103_1650.py  0006_temporaryurl.py
youTube_project/: asgi.py  settings.py  urls.py  wsgi.py
