[tool.poetry]
name = "youtube_downloader"
version = "0.1.0"
description = ""
authors = ["Jordan Kubista <jkube29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
flake8 = "^4.0.1"
pytube = "^11.0.1"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
